--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,10 +11,13 @@ source:
   sha256: 430ae8354789de4fd19ee52f3b1f739e1fba576f0aded0897c3c2bc00fb38778
 
 build:
-  number: 1
+  number: 100
 
 requirements:
   build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
     - {{ compiler('cxx') }}
 
   host:
@@ -47,8 +50,6 @@ test:
     - if not exist %PREFIX%\\Library\\lib\\boost_{{ each_boost_lib }}.lib exit 1                          # [win]
     - if not exist %PREFIX%\\Library\\lib\\libboost_{{ each_boost_lib }}.lib exit 1                       # [win]
     {% endfor %}
-    - conda inspect linkages -p $PREFIX boost  # [not win]
-    - conda inspect objects -p $PREFIX boost  # [osx]
 
 about:
   home: http://www.boost.org/
